[package]
name = "ham_radio_logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.20"
serde_json = "1.0.107"
sqlite = { version = "0.31.1", features = ["bundled"] }
tokio = { version = "1.32.0", features = ["full"] }
whoami = "1.4.1"
